--- a/portfolio.html
+++ b/portfolio.html
@@ -16,182 +16,194 @@
   <body>
     <!-- HEADER -->
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logotype link" href="./index.html">
-          Web<span class="header-logo-color">Studio</span>
-        </a>
-        <ul class="nav-menu list">
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts list">
-          <li>
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header-container">
+        <nav class="header-nav">
+          <a class="logotype link" href="./index.html">
+            Web<span class="header-logo-color">Studio</span>
+          </a>
+          <ul class="nav-menu list">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list list">
+            <li>
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="portfolio-cards">
-        <h1 hidden>Portfolio Cards</h1>
-        <!-- FILTERS -->
-        <ul class="filters-list list">
-          <li>
-            <button class="filters-btn button" type="button">All</button>
-          </li>
-          <li>
-            <button class="filters-btn button" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="filters-btn button" type="button">App</button>
-          </li>
-          <li>
-            <button class="filters-btn button" type="button">Design</button>
-          </li>
-          <li>
-            <button class="filters-btn button" type="button">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="section-title visually-hidden">Portfolio Cards</h1>
+          <!-- FILTERS -->
+          <ul class="filters-list list">
+            <li>
+              <button class="filters-btn button" type="button">All</button>
+            </li>
+            <li>
+              <button class="filters-btn button" type="button">Web Site</button>
+            </li>
+            <li>
+              <button class="filters-btn button" type="button">App</button>
+            </li>
+            <li>
+              <button class="filters-btn button" type="button">Design</button>
+            </li>
+            <li>
+              <button class="filters-btn button" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
 
-        <!--PROJECT CARDS  -->
-        <ul class="project-cards-list list">
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row1-img1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Banking App Interface Concept</h2>
-              <p class="project-cards-text">App</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row1-img2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Cashless Payment</h2>
-              <p class="project-cards-text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row1-img3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Meditation App</h2>
-              <p class="project-cards-text">App</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row2-img1.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Taxi Service</h2>
-              <p class="project-cards-text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row2-img2.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Screen Illustrations</h2>
-              <p class="project-cards-text">Design</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row2-img3.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Online Courses</h2>
-              <p class="project-cards-text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row3-img1.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Instagram Stories Concept</h2>
-              <p class="project-cards-text">Design</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row3-img2.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Organic Food</h2>
-              <p class="project-cards-text">Web Site</p>
-            </a>
-          </li>
-          <li class="project-cards-list-item">
-            <a class="project-cards-link link" href="">
-              <img
-                src="./images/portfolio-cards/row3-img3.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="project-cards-title">Fresh Coffee</h2>
-              <p class="project-cards-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+          <!--PROJECT CARDS  -->
+          <ul class="project-cards-list list">
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row1-img1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">
+                  Banking App Interface Concept
+                </h2>
+                <p class="project-cards-text">App</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row1-img2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Cashless Payment</h2>
+                <p class="project-cards-text">Marketing</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row1-img3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Meditation App</h2>
+                <p class="project-cards-text">App</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row2-img1.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Taxi Service</h2>
+                <p class="project-cards-text">Marketing</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row2-img2.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Screen Illustrations</h2>
+                <p class="project-cards-text">Design</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row2-img3.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Online Courses</h2>
+                <p class="project-cards-text">Marketing</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row3-img1.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Instagram Stories Concept</h2>
+                <p class="project-cards-text">Design</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row3-img2.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Organic Food</h2>
+                <p class="project-cards-text">Web Site</p>
+              </a>
+            </li>
+            <li class="project-cards-list-item">
+              <a class="project-cards-link link" href="">
+                <img
+                  src="./images/portfolio-cards/row3-img3.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="project-cards-title">Fresh Coffee</h2>
+                <p class="project-cards-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- FOOTER -->
     <footer class="page-footer">
-      <a class="logotype link" href="./index.html">
-        Web<span class="footer-logo-color">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container container">
+        <a class="logotype link" href="./index.html">
+          Web<span class="footer-logo-color">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
