--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -87,10 +91,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">
-                  Banking App Interface Concept
-                </h2>
-                <p class="project-cards-text">App</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="project-cards-text">App</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -101,8 +107,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Cashless Payment</h2>
-                <p class="project-cards-text">Marketing</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Cashless Payment</h2>
+                  <p class="project-cards-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -113,8 +121,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Meditation App</h2>
-                <p class="project-cards-text">App</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Meditation App</h2>
+                  <p class="project-cards-text">App</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -125,8 +135,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Taxi Service</h2>
-                <p class="project-cards-text">Marketing</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Taxi Service</h2>
+                  <p class="project-cards-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -137,8 +149,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Screen Illustrations</h2>
-                <p class="project-cards-text">Design</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Screen Illustrations</h2>
+                  <p class="project-cards-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -149,8 +163,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Online Courses</h2>
-                <p class="project-cards-text">Marketing</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Online Courses</h2>
+                  <p class="project-cards-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -161,8 +177,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Instagram Stories Concept</h2>
-                <p class="project-cards-text">Design</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Instagram Stories Concept</h2>
+                  <p class="project-cards-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -173,8 +191,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Organic Food</h2>
-                <p class="project-cards-text">Web Site</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Organic Food</h2>
+                  <p class="project-cards-text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="project-cards-list-item">
@@ -185,8 +205,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="project-cards-title">Fresh Coffee</h2>
-                <p class="project-cards-text">Web Site</p>
+                <div class="project-cards-conteiner">
+                  <h2 class="project-cards-title">Fresh Coffee</h2>
+                  <p class="project-cards-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
