--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <main>
       <!-- HERO -->
-      <section class="hero container">
-        <div class="hero-container">
+      <section class="hero">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
@@ -144,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="member-container">
+                <h3 class="team-member-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -154,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="member-container">
+                <h3 class="team-member-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -164,8 +168,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="member-container">
+                <h3 class="team-member-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -174,8 +180,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="member-container">
+                <h3 class="team-member-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -184,7 +192,7 @@
     <!-- FOOTER -->
     <footer class="page-footer">
       <div class="footer-container container">
-        <a class="logotype link" href="./index.html">
+        <a class="logotype link footer-logo" href="./index.html">
           Web<span class="footer-logo-color">Studio</span>
         </a>
         <p class="footer-text">
