--- a/portfolio.html
+++ b/portfolio.html
@@ -218,7 +218,7 @@
     <!-- FOOTER -->
     <footer class="page-footer">
       <div class="footer-container container">
-        <a class="logotype link" href="./index.html">
+        <a class="logotype link footer-logo" href="./index.html">
           Web<span class="footer-logo-color">Studio</span>
         </a>
         <p class="footer-text">
